[package]
name = "zero-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alacritty = { git = "https://github.com/alacritty/alacritty" }
alacritty_terminal = "0.22.0"
druid = { version = "0.8.3", features = ["im"] }
floem-peniko = "0.1.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
serde = "1.0"
serde_json = "1.0"
tracing = { version = "0.1.37" }
url = { version = "2.3.1" }
vte = { version = "0.13.0", default-features = false, features = ["ansi", "serde"] }
